This commit add three tables (classes): Counties, Vaccine, Country_Vaccine. As for demo purpose, only five countries and 8 vaccine are selected and used, based on the web site https://wwwnc.cdc.gov/travel/destinations/traveler/none/australia?s_cid=ncezid-dgmq-travel-single-001 app.py and tables.py are also modified in order to create three tables. db.relationship and db.ForeignKey() are used to create the relationship between three tables, one to many.

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,17 @@
 <html>
     <head>
-        <title>Simple form validator</title>
+        <title>Login Page</title>
     </head>
     <body>
-        <h1>Login Your Account</h1>
+        <h1>Login Account</h1>
         <div class='form'>
             <form method='POST' action=''>
                 <!--The hidden tag here is necessary for CSRF protection (always include in forms)-->
                 {{ form.hidden_tag() }}
                 <!--We display the username field label and the field itself-->
                 
-                <h4>{{ form.email.label }} {{ form.email }}
+                <h4>{{ form.email.label }} {{ form.email }} 
+                    {{form.entrydate}}
                 {% if form.email.errors %}
                 <div class='error'>
                      **error:
