--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <title>Simple form</title>
+        <title>New Customer To Create New Account</title>
     </head>
     <body>
+        <h1>Please input the data to setup the account}</h1>
         <div class='form'>
             <form method='POST' action=''>
                 {{ form.hidden_tag() }}
