--- a/templates/login.html
+++ b/templates/login.html
@@ -36,6 +36,8 @@
                 <br>
                 {{ form.submit }}
 
+                {{form.test}}
+
                 {{ message }}
             </form>
         </div>
