--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,13 @@
     <head>
         <title>Login Page</title>
     </head>
+    <style type="text/css" media="screen"><!--
+        #pos {
+                        position:absolute;
+                        left:12em;
+                        top:125px;
+        }
+    --></style>
     <body>
         <h1>Login Account</h1>
         <div class='form'>
@@ -9,7 +16,53 @@
                 <!--The hidden tag here is necessary for CSRF protection (always include in forms)-->
                 {{ form.hidden_tag() }}
                 <!--We display the username field label and the field itself-->
-                
+                <!--insert a table>-->
+                <div id= "pos">
+                    <table style="width:50%">
+                        <col style="width:8%">
+                        <col style="width:16%">
+                        <col style="color:red;">
+
+                        <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        </tr>
+                        <tr>
+                        <td>{{ form.email.label }}</td>
+                        <td>{{ form.email }} </td>
+                        <td>
+                            {% if form.email.errors %}
+                            <div class='error' style="color:red;">
+                                **error:
+                                <span>{{ form.email.data }}</span>
+                                {% for error in form.email.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}</h4>
+                            </div>
+                            {% endif %}
+                        </td>
+                        </tr>
+                        <tr></tr>
+                        <tr>
+                            <td>{{ form.password.label }}</td>
+                            <td>{{ form.password }} </td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>{{ form.submit }}</td>
+                            <td> </td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </div>
+            </form>
+        </div>
+    <body>
+</html>
+
+
+<!--
                 <h4>{{ form.email.label }} {{ form.email }} 
                     {{form.entrydate}}
                 {% if form.email.errors %}
@@ -38,11 +91,4 @@
 
                 {{form.test}}
 
-                {{ message }}
-            </form>
-        </div>
-        <div>
-            
-        </div>
-    <body>
-</html>
+                {{ message }} -->
