--- a/templates/update.html
+++ b/templates/update.html
@@ -29,6 +29,9 @@
                 <br>
                 <br>
                 {{ form.delete }}
+                <br>
+                <br>
+                {{ form.booking }}
             {{ message }}
 
 
