This commit modifies most of the HTML files. The modification make the title and layout more suitable to the project. This commit also makes the switch between different routes more straightforwads. This commit attemots to reduce the size of the codes by create more .py files for app.py to import. Only a few portion used to test. There is still room to be improved.

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>Booking Page</title>
+        <title>Appointment Management Page</title>
     </head>
     <body>
-        <h1>Login Account</h1>
+        <h1>Manage your Appointments</h1>
         <div class='form'>
             <form method='POST' action=''>
                 <!--The hidden tag here is necessary for CSRF protection (always include in forms)-->
@@ -28,9 +28,9 @@
                 <span style="display:inline-block; width: 15em;"></span>
                 <span>{{ form.delete }}</span>
                 <span style="display:inline-block; width: 2em;"></span>
-                <span>{{ form.update }}</span>
-
-                
+                <span>{{ form.update }}</span> 
+                <span style="display:inline-block; width: 3em;"></span>
+                <span style="color:red" >{{msg}} </span>
                 <br>
                 <br>
                 <h4>
