--- a/templates/update.html
+++ b/templates/update.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Account Details</title>
+        <title>Change Existing Appointment</title>
     </head>
     <body>
         <div class='form'>
@@ -31,7 +31,7 @@
                 {{ form.delete }}
                 <br>
                 <br>
-                {{ form.booking }}
+                {{ form.booking }}  
             {{ message }}
 
 
