--- a/templates/updatebooking.html
+++ b/templates/updatebooking.html
@@ -19,7 +19,7 @@
                 <h4> {{form.entrydate.label}} {{form.entrydate}}  {{form.timeslot.label}} {{form.timeslot}}</h4>
                 <span style="display:block; height: 5em;"></span>
                 <span style="display:inline-block; width: 2em;"></span>
-                <span>{{ form.update }}</span>
+                <span>{{ form.update }}</span>     <span>{{ form.cancel }}</span>
 
                 
                 <br>
