--- a/templates/login.html
+++ b/templates/login.html
@@ -18,9 +18,9 @@
                 <!--We display the username field label and the field itself-->
                 <!--insert a table>-->
                 <div id= "pos">
-                    <table style="width:50%">
-                        <col style="width:8%">
-                        <col style="width:16%">
+                    <table style="width:60%">
+                        <col style="width:6%">
+                        <col style="width:15%">
                         <col style="color:red;">
 
                         <tr>
@@ -34,7 +34,7 @@
                         <td>
                             {% if form.email.errors %}
                             <div class='error' style="color:red;">
-                                **error:
+                                **:
                                 <span>{{ form.email.data }}</span>
                                 {% for error in form.email.errors %}
                                     <span>{{ error }}</span>
@@ -47,10 +47,10 @@
                         <tr>
                             <td>{{ form.password.label }}</td>
                             <td>{{ form.password }} </td>
-                            <td></td>
+                            <td> <div class='error' style="color:red;"><span>{{message}}</span> </div></td>
                         </tr>
                         <tr>
-                            <td>{{ form.submit }}</td>
+                            <td>{{ form.signin }}</td>
                             <td> </td>
                             <td></td>
                         </tr>
