--- a/templates/booking.html
+++ b/templates/booking.html
@@ -37,6 +37,9 @@
                     {% for m in message %}
                         <br> {{m}}
                     {% endfor %}</h4>
+                <br>
+                <br>
+                <span>{{ form.back }}</span>
             </form>
         </div>
 
