--- a/templates/updatebooking.html
+++ b/templates/updatebooking.html
@@ -3,7 +3,7 @@
         <title>Booking Page</title>
     </head>
     <body>
-        <h1>Login Account</h1>
+        <h1>Appointment</h1>
         <div class='form'>
             <form method='POST' action=''>
                 <!--The hidden tag here is necessary for CSRF protection (always include in forms)-->
