--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
         <title>New Customer To Create New Account</title>
     </head>
     <body>
-        <h1>Hi welcome to join us. Please fill the form to complete your account setup</h1>
+        <h1>Hi welcome to join us. Please fill the form to complete your registration</h1>
         <div class='form'>
             <form method='POST' action=''>
                 {{ form.hidden_tag() }}
