Modify html used in app.

--- a/templates/actions.html
+++ b/templates/actions.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Login Page</title>
+        <title>Actions Page</title>
     </head>
     <style type="text/css" media="screen"><!--
         #pos {
