--- a/templates/booking.html
+++ b/templates/booking.html
@@ -24,7 +24,7 @@
                 <span>{{form.appointments.label}} {{form.appointments}} </span>
                 <br>
                 <br>
-                <span>{{ form.submit }}</span>
+                <span>{{ form.create }}</span>
                 <span style="display:inline-block; width: 15em;"></span>
                 <span>{{ form.delete }}</span>
                 <span style="display:inline-block; width: 2em;"></span>
