--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,12 +36,15 @@
             {% if form.password.errors %}
             <div class='error'>
                  **error:
+                {% for error in form.email.errors %}
+                    <br>{{ error }}
+                {% endfor %}
                 {% for error in form.password.errors %}
-                    <span>{{ error }}</span>
-                {% endfor %}</h4>
+                    <br>{{ error }}
+                {% endfor %}
                 {% for error in form.reenterpassword.errors %}
                     <span>{{ error }}</span>
-                {% endfor %}</h4>
+                {% endfor %}
             </div>
             {% endif %}
 
