--- a/templates/updatebooking.html
+++ b/templates/updatebooking.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Booking Page</title>
+        <title>Update Booking Page</title>
     </head>
     <body>
         <h1>Appointment</h1>
